--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "Ahmad Faisal Hidayat",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
   }
 }
